# effective-series

./: .gitignore  README.md
cpp/: CMakeLists.txt  cmakelistandninja.md  highPerformance.cpp  i10.cpp  i10extend.cpp  i10rvalue.cpp  i11.cpp  i12.cpp  i13.cpp  i14.cpp  i15.cpp  i16.cpp  i17.cpp  i18-20.cpp  i20extend.cpp  i21.cpp  i22.cpp  i23.cpp  i25swap.cpp  i26-27.cpp  i28.cpp  i29.cpp  i3.cpp  i30.cpp  i31.cpp  i32-40.cpp  i3extend.cpp  i4.cpp  i41template.cpp  i43.cpp  i44-48.cpp  i48enum.cpp  i5.cpp  i50.cpp  i55boost.cpp  i5extend.cpp  i6.cpp  i7.cpp  i7extend.cpp  i8.cpp  (+3 more)
java/Spring/: pom.xml
python/: 2-ListsDicts.ipynb  3-Functions.ipynb  4-Comprehensions.ipynb  6-MetaClasses.ipynb
python/.ipynb_checkpoints/: 1-Thinking-checkpoint.ipynb  5-Classes-checkpoint.ipynb  7-Concurrency-checkpoint.ipynb
